# backend-flask/app.py
@@ -4,6 +4,7 @@ from flask_cors import CORS, cross_origin
 import os
 
 from services.home_activities import *
+from services.notifications_activities import 
 from services.user_activities import *
 from services.create_activity import *
 from services.create_reply import *
@@ -64,6 +65,13 @@ def data_create_message():
 def data_home():
   data = HomeActivities.run()
   return data, 200
+
+
+@app.route("/api/activities/notifications", methods=['GET'])
+def data_notifications():
+  data = NotificationsActivities.run()
+  return data, 200
+
 
 @app.route("/api/activities/@<string:handle>", methods=['GET'])
 def data_handle(handle):
